# goit-pythonweb-hw-03

./: Dockerfile  error.html  index.html  main.py  message.html  pyproject.toml
storage/: data.json
templates/: read.jinja
