[project]
name = "goit-pythonweb-hw-03"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrii Veremii",email = "114438382+AndriiVeremi@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
